--- a/package.json
+++ b/package.json
@@ -10,17 +10,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@aws-sdk/lib-dynamodb": "^3.49.0",
     "aws-sdk": "^2.1069.0",
     "axios": "^0.25.0",
     "uuid": "^3.3.2",
     "yup": "^0.32.11"
   },
   "devDependencies": {
-    "aws-sdk-client-mock": "^0.5.6",
-    "chai": "^4.3.6",
-    "jest": "^27.5.0",
-    "lambda-tester": "^4.0.1",
-    "mocha": "^9.2.0"
+    "jest": "^27.5.0"
   }
 }
